﻿- Add support for Barges mod


Version 1.4.1.3 -

- Compatibility with game version 1.16.1


Version 1.4.1.2 -

- Fix helicopter stops being mistakenly tagged as selectable


Version 1.4.1.1 -

- Move button on zoned industry panel to top-left to avoid overlap with panel text in some languages


Version 1.4.1 -

- Add train selection to cargo hub
- Fix water pumping service support
- Add detailed logging option


Version 1.4 -

- Add support for shelters (evacuation buses)
- Add name search filter


Version 1.3.3 -

- Change 'copy to all buildings of this type' behaviour to exact prefab match only


Version 1.3.2.2 -

- Fix helicopter depot support


Version 1.3.2.1 -

- Add extra check to prevent confusion between fishing boats and fish transport


Version 1.3.2 -

- Allow active Vehicle Selector settings to take priority over Transport Lines Manager for intercity passenger vehicles (if no vehicles are selected, the mod will continue to defer to TLM)
- Add checks for invalid data when saving


Version 1.3.1 -

- Improve trailer detection when collating vehicle lists
- Add check to ensure building panel doesn't overflow any screen boundary when opening
- Resolve conflict with Barges mod


Version 1.3 -

- Add support for private airports (aviation club)
- Defer to Transport Lines Manager for intercity passenger vehicles (passenger trains, buses, ships, aircraft) if TLM is present
- Ensure priority over NoBigTruck patches
- Add exception handling in case of corrupted Transfer Controller vehicle data


Version 1.2 -

- Add support for intercity trains
- Add support for cable cars
- Add support for bus-intercity bus hub
- Add support for vanilla airport and Industries DLC cargo airport
- Fix disaster helicopters being selectable as trucks (and vice-versa)
- Reposition Customize It Extended panel button for unique factories
- Add core translations


Version 1.1 -

- Add support for cargo and passenger harbors