@@ -1,4 +1,5 @@
 ﻿- Add support for Barges mod
+- Add ItemClass level checks to copy-paste
 
 
 Version 1.4.1.3 -
